Se agrego nombre, sobre mi y conocimiento

--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto final integrador</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    <div>
-        <img id="imagenUsuario" src="" alt="Foto de usuario.">
-    </div>
-    <ul>
-        <li><a href="default.asp">Inicio</a></li>
-        <li><a href="contact.asp">Contacto</a></li>
-        <li><a href="news.asp">Conocimientos</a></li>
-        <li><a href="about.asp">About</a></li>
-      </ul>
-    <script src="js/scripts.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Proyecto final integrador</title>
+        <link rel="stylesheet" href="styles/style.css" />
+    </head>
+    <body>
+        <div id="bodycontent">
+            <div id="contactInfoContainer">
+                <li><a href="default.asp">Inicio</a></li>
+                <li><a href="contact.asp">Contacto</a></li>
+                <li><a href="news.asp">Conocimientos</a></li>
+                <li><a href="about.asp">About</a></li>
+            </div>
+            <script src="js/scripts.js"></script>
+            <div id="bodyTextContainer">
+                <div id="headerBox">
+                    <img id="imagenUsuario" alt="Foto de usuario." />
+                    <div id="headerText">
+                        <div id="nombreContainer" >
+                            <h1 id="nombreHeader"></h1>
+                        </div>
+                        <div id="aboutContainer">
+                            <h2>Sobre mi</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit. Soluta reprehenderit quasi esse. Illo ad
+                                molestias iste aliquid quasi excepturi similique
+                                nobis, corrupti quia temporibus dolorum debitis
+                                accusantium veniam distinctio minima.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="">
+                    <h2>Conocimiento</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Soluta reprehenderit quasi esse. Illo ad molestias
+                        iste aliquid quasi excepturi similique nobis, corrupti
+                        quia temporibus dolorum debitis accusantium veniam
+                        distinctio minima.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
