--- a/index.html
+++ b/index.html
@@ -8,35 +8,51 @@
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
-        <div id="bodycontent">
-            <div id="contactInfoContainer">
+        <header>
+            <h1>TITULO TP</h1>
+        </header>
+        <section id="bodyContent">
+            <nav id="contactInfoContainer">
                 <li><a href="default.asp">Inicio</a></li>
                 <li><a href="contact.asp">Contacto</a></li>
                 <li><a href="news.asp">Conocimientos</a></li>
                 <li><a href="about.asp">About</a></li>
-            </div>
+            </nav>
             <script src="js/scripts.js"></script>
             <div id="bodyTextContainer">
                 <div id="headerBox">
-                    <img id="imagenUsuario" alt="Foto de usuario." />
+                    <div id="imageContainer">
+                        <img id="imagenUsuario" alt="Foto de usuario." />
+                    </div>
                     <div id="headerText">
-                        <div id="nombreContainer" >
-                            <h1 id="nombreHeader"></h1>
+                        <div id="nombreContainer">
+                            <h2 id="nombreHeader"></h2>
                         </div>
-                        <div id="aboutContainer">
-                            <h2>Sobre mi</h2>
+                        <div id="textSpace">
+                            <h3>Sobre mi</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing
-                                elit. Soluta reprehenderit quasi esse. Illo ad
-                                molestias iste aliquid quasi excepturi similique
-                                nobis, corrupti quia temporibus dolorum debitis
-                                accusantium veniam distinctio minima.
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Soluta reprehenderit quasi
+                                esse. Illo ad molestias iste aliquid quasi
+                                excepturi similique nobis, corrupti quia
+                                temporibus dolorum debitis accusantium veniam
+                                distinctio minima.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div id="">
-                    <h2>Conocimiento</h2>
+                <div id="textSpace">
+                    <h3>Conocimiento</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Soluta reprehenderit quasi esse. Illo ad molestias
+                        iste aliquid quasi excepturi similique nobis, corrupti
+                        quia temporibus dolorum debitis accusantium veniam
+                        distinctio minima.
+                    </p>
+                </div>
+                <div id="textSpace">
+                    <h3>Conocimiento</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit. Soluta reprehenderit quasi esse. Illo ad molestias
@@ -46,6 +62,6 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
     </body>
 </html>
