Se agregaron datos de contacto

--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
         </header>
         <section id="bodyContent">
             <nav id="contactInfoContainer">
-                <li><a href="default.asp">Inicio</a></li>
-                <li><a href="contact.asp">Contacto</a></li>
-                <li><a href="news.asp">Conocimientos</a></li>
-                <li><a href="about.asp">About</a></li>
+                <li>
+                    <h4>Correo</h4>
+                    <p id="correoText"></p>
+                </li>
+                <li>
+                    <h4>Telefono</h4>
+                    <p id="telefonoText"></p>
+                </li>
+                <li>
+                    <h4>Celular</h4>
+                    <p id="celularText"></p>
+                </li>
+                <li>
+                    <h4>Residencia</h4>
+                    <p id="residenciaText"></p>
+                </li>
             </nav>
             <script src="js/scripts.js"></script>
             <div id="bodyTextContainer">
@@ -28,18 +40,17 @@
                         <div id="nombreContainer">
                             <h2 id="nombreHeader"></h2>
                         </div>
-                        <div id="textSpace">
-                            <h3>Sobre mi</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Soluta reprehenderit quasi
-                                esse. Illo ad molestias iste aliquid quasi
-                                excepturi similique nobis, corrupti quia
-                                temporibus dolorum debitis accusantium veniam
-                                distinctio minima.
-                            </p>
-                        </div>
                     </div>
+                </div>
+                <div id="textSpace">
+                    <h3>Sobre mi</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Soluta reprehenderit quasi esse. Illo ad molestias
+                        iste aliquid quasi excepturi similique nobis, corrupti
+                        quia temporibus dolorum debitis accusantium veniam
+                        distinctio minima.
+                    </p>
                 </div>
                 <div id="textSpace">
                     <h3>Conocimiento</h3>
@@ -63,5 +74,11 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <p style="text-align: center">
+                Este proyecto fue desarrollado por Francisco Zufiaurre para el
+                proyecto integrador final de argentina programa (2023).
+            </p>
+        </footer>
     </body>
 </html>
