Sea gregaron inconos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     <div class="contactData" style="display: flex">
                         <p onclick="mailTo()" id="correoText"></p>
                         <div>
-                            <button onclick="mailTo()"><i class="fa fa-envelope"></i></button>
+                            <button onclick="mailTo()">
+                                <i class="fa fa-envelope"></i>
+                            </button>
                             <button onclick="bufferText('correoText')">
                                 <i class="fa fa-clipboard"></i>
                             </button>
@@ -71,35 +73,37 @@
                     </div>
                 </div>
                 <div id="textSpace">
-                    <h3>Sobre mi</h3>
+                    <h3>
+                        Sobre mi
+                        <i class="fa fa-user-circle" aria-hidden="true"></i>
+                    </h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Soluta reprehenderit quasi esse. Illo ad molestias
-                        iste aliquid quasi excepturi similique nobis, corrupti
-                        quia temporibus dolorum debitis accusantium veniam
-                        distinctio minima. Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Iusto repellendus laborum
-                        magnam dolore necessitatibus, libero inventore nesciunt
-                        ad ullam molestiae aliquam eaque sit, sequi quidem sint
-                        a, dolor et quos? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Minus sunt necessitatibus natus cum
-                        aliquid expedita, provident reiciendis illum, nam,
-                        dignissimos consectetur distinctio. Culpa nesciunt
-                        eveniet temporibus aliquam quia libero commodi!
+                        Me considero una persona respetuosa que le gusta crecer
+                        constantemente. Me gusta mucho compartir de mi familia y
+                        en mi tiempo libre mirar series o estudiar programacion.
+                        Soy una persona muy activa que se mueve constantemente
+                        en el ambito laboral desempeñando tareas de forma optima
+                        y eficaz.
                     </p>
                 </div>
                 <div id="textSpace">
-                    <h3>Conocimiento</h3>
+                    <h3>Conocimiento <i class="fa fa-graduation-cap"></i></h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Soluta reprehenderit quasi esse. Illo ad molestias
-                        iste aliquid quasi excepturi similique nobis, corrupti
-                        quia temporibus dolorum debitis accusantium veniam
-                        distinctio minima.
+                        Mis conocimientos parten desde la escuela técnica en la
+                        cual desarrolle una pasión por programación. Me recibí
+                        de técnico en programación de la misma.
+                    </p>
+                    <p>
+                        Estudie en la facultad de ingeniera por 6 años,
+                        recibiéndome de ingeniero en sistemas con conocimientos
+                        en HTML, CSS, JAVASCRIPT, C# y base de datos.
                     </p>
                 </div>
                 <div id="textSpace">
-                    <h3>Experiencia</h3>
+                    <h3>
+                        Experiencia
+                        <i class="fa fa-folder" aria-hidden="true"></i>
+                    </h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit. Soluta reprehenderit quasi esse. Illo ad molestias
