fix imagen responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h3 id="infoContacto">Contacto:</h3>
                 <li class="contactListItem">
                     <h4>Correo</h4>
-                    <div class="contactData" style="display: flex">
+                    <div class="contactData">
                         <p onclick="mailTo()" id="correoText"></p>
                         <div>
                             <button onclick="mailTo()">
