Mejora de stilo en lista de contacto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h4>Correo</h4>
                     <div class="contactData">
                         <p onclick="mailTo()" id="correoText"></p>
-                        <div>
+                        <div style="display: flex; flex-direction: column ;">
                             <button onclick="mailTo()">
                                 <i class="fa fa-envelope"></i>
                             </button>
