completado de html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h4>Correo</h4>
                     <div class="contactData">
                         <p onclick="mailTo()" id="correoText"></p>
-                        <div style="display: flex; flex-direction: column ;">
+                        <div style="display: flex; flex-direction: column">
                             <button onclick="mailTo()">
                                 <i class="fa fa-envelope"></i>
                             </button>
@@ -88,29 +88,44 @@
                 </div>
                 <div id="textSpace">
                     <h3>Conocimiento <i class="fa fa-graduation-cap"></i></h3>
-                    <p>
-                        Mis conocimientos parten desde la escuela técnica en la
-                        cual desarrolle una pasión por programación. Me recibí
-                        de técnico en programación de la misma.
-                    </p>
-                    <p>
-                        Estudie en la facultad de ingeniera por 6 años,
-                        recibiéndome de ingeniero en sistemas con conocimientos
-                        en HTML, CSS, JAVASCRIPT, C# y base de datos.
-                    </p>
+                    <ul>
+                        <li>
+                            <p>
+                                Mis conocimientos parten desde la escuela
+                                técnica en la cual desarrolle una pasión por
+                                programación mobile. Me recibí de técnico en
+                                programación de la misma.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Estudie en la facultad de ingeniera por 6 años,
+                                recibiéndome de ingeniero en sistemas con
+                                conocimientos en HTML, CSS, JAVASCRIPT, C# y
+                                base de datos.
+                            </p>
+                        </li>
+                    </ul>
                 </div>
                 <div id="textSpace">
                     <h3>
                         Experiencia
                         <i class="fa fa-folder" aria-hidden="true"></i>
                     </h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Soluta reprehenderit quasi esse. Illo ad molestias
-                        iste aliquid quasi excepturi similique nobis, corrupti
-                        quia temporibus dolorum debitis accusantium veniam
-                        distinctio minima.
-                    </p>
+                    <ul>
+                        <li>
+                            <p>
+                                (2020-2022) Mercado Libre: me encargaba del
+                                desarrollo mobile con Xamarin.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                (2022-Presente) Google: lider de un squad de
+                                desarrollo mobile
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
