--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="textSpace">
+                <div class="textSpace">
                     <h3>
                         Sobre mi
                         <i class="fa fa-user-circle" aria-hidden="true"></i>
@@ -86,7 +86,7 @@
                         y eficaz.
                     </p>
                 </div>
-                <div id="textSpace">
+                <div class="textSpace">
                     <h3>Conocimiento <i class="fa fa-graduation-cap"></i></h3>
                     <ul>
                         <li>
@@ -107,7 +107,7 @@
                         </li>
                     </ul>
                 </div>
-                <div id="textSpace">
+                <div class="textSpace">
                     <h3>
                         Experiencia
                         <i class="fa fa-folder" aria-hidden="true"></i>
